--- a/craft/templates/_layouts/base.html
+++ b/craft/templates/_layouts/base.html
@@ -21,5 +21,8 @@
   {% block foot %}{% endblock %}
 
   {{ getFootHtml() }}
+
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.11.0/styles/default.min.css">
+  <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.11.0/highlight.min.js"></script>
 </body>
 </html>
